audiobookshelf/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: audiobookshelf-gateway
  namespace: audiobookshelf
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: audiobookshelf-cert
      hosts:
        - audiobooks.gwg313.xyz
