audiobookshelf/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  hosts:
    - audiobooks.gwg313.xyz
  gateways:
    - audiobookshelf-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: audiobookshelf
            port:
              number: 80
